Fix for drop-down filter alignment in TreeTable's headers in Chrome/Safari
git-svn-id: http://svn-new/TeamDev/OpenFaces/trunk@551 7826287f-d7cb-499f-91f0-9f45672cc948

--- a/openFaces/source/org/openfaces/renderkit/default.css
+++ b/openFaces/source/org/openfaces/renderkit/default.css
@@ -646,6 +646,7 @@
   background: white;
   width: 140px;
   height: 20px;
+  table-layout: fixed;
 }
 
 .o_spinner {
